--- a/dest/css/app.css
+++ b/dest/css/app.css
@@ -2240,31 +2240,28 @@ picture {
 
 .milestone {
   padding-top: 100px;
-  padding-bottom: 200px;
+  padding-bottom: 100px;
 }
 @media screen and (max-width: 1279px) {
   .milestone {
     padding-top: 75px;
-    padding-bottom: 150px;
+    padding-bottom: 75px;
   }
 }
 @media screen and (max-width: 767px) {
   .milestone {
     padding-top: 50px;
-    padding-bottom: 100px;
+    padding-bottom: 50px;
   }
 }
 .milestone__title {
-  padding-bottom: 100px;
+  padding-bottom: 50px;
   font-weight: 900;
-  font-size: 48px;
+  font-size: 40px;
+  line-height: 74px;
   text-transform: uppercase;
+  letter-spacing: 3px;
   color: #FFFFFF;
-}
-@media screen and (max-width: 1535px) {
-  .milestone__title {
-    font-size: 42px;
-  }
 }
 @media screen and (max-width: 1023px) {
   .milestone__title {
@@ -2273,7 +2270,6 @@ picture {
 }
 @media screen and (max-width: 767px) {
   .milestone__title {
-    padding-bottom: 75px;
     font-size: 30px;
   }
 }
@@ -2289,10 +2285,12 @@ picture {
       -ms-flex-align: center;
           align-items: center;
   padding: 100px 100px 80px;
+  border-radius: 10px;
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  border-radius: 50px;
-  background-color: #01052F;
+  background: -webkit-gradient(linear, left top, right top, from(#09103A), color-stop(45.83%, #493E3E), to(#09103A));
+  background: -o-linear-gradient(left, #09103A 0%, #493E3E 45.83%, #09103A 100%);
+  background: linear-gradient(90deg, #09103A 0%, #493E3E 45.83%, #09103A 100%);
 }
 @media screen and (max-width: 1365px) {
   .milestone__wrapper {
@@ -2308,12 +2306,28 @@ picture {
   padding-top: 40px;
   padding-bottom: 40px;
   text-align: center;
+  font-size: 48px;
+}
+@media screen and (max-width: 1439px) {
+  .milestone__wrapper .milestone__title {
+    font-size: 42px;
+  }
+}
+@media screen and (max-width: 1023px) {
+  .milestone__wrapper .milestone__title {
+    font-size: 35px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .milestone__wrapper .milestone__title {
+    font-size: 30px;
+  }
 }
 .milestone__wrapper > img {
   display: block;
   max-width: 100%;
   height: auto;
-  margin: 40px auto;
+  margin: 0 auto 40px;
 }
 .milestone__list, .milestone__desc {
   width: 100%;
