--- a/dest/css/app.css
+++ b/dest/css/app.css
@@ -1761,31 +1761,28 @@ picture {
 
 .whitepaper {
   padding-top: 100px;
-  padding-bottom: 200px;
+  padding-bottom: 100px;
 }
 @media screen and (max-width: 1279px) {
   .whitepaper {
     padding-top: 75px;
-    padding-bottom: 150px;
+    padding-bottom: 75px;
   }
 }
 @media screen and (max-width: 767px) {
   .whitepaper {
     padding-top: 50px;
-    padding-bottom: 100px;
+    padding-bottom: 50px;
   }
 }
 .whitepaper__title {
-  padding-bottom: 100px;
+  padding-bottom: 50px;
   font-weight: 900;
-  font-size: 48px;
+  font-size: 40px;
+  line-height: 74px;
   text-transform: uppercase;
+  letter-spacing: 3px;
   color: #FFFFFF;
-}
-@media screen and (max-width: 1535px) {
-  .whitepaper__title {
-    font-size: 42px;
-  }
 }
 @media screen and (max-width: 1023px) {
   .whitepaper__title {
@@ -1794,7 +1791,6 @@ picture {
 }
 @media screen and (max-width: 767px) {
   .whitepaper__title {
-    padding-bottom: 75px;
     font-size: 30px;
   }
 }
@@ -1810,10 +1806,12 @@ picture {
       -ms-flex-align: center;
           align-items: center;
   padding: 100px 100px 80px;
+  border-radius: 10px;
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  border-radius: 50px;
-  background-color: #01052F;
+  background: -webkit-gradient(linear, left top, right top, from(#09103A), color-stop(45.83%, #493E3E), to(#09103A));
+  background: -o-linear-gradient(left, #09103A 0%, #493E3E 45.83%, #09103A 100%);
+  background: linear-gradient(90deg, #09103A 0%, #493E3E 45.83%, #09103A 100%);
 }
 @media screen and (max-width: 1365px) {
   .whitepaper__section {
@@ -1828,6 +1826,22 @@ picture {
 .whitepaper__section .whitepaper__title {
   padding-top: 40px;
   padding-bottom: 40px;
+  font-size: 48px;
+}
+@media screen and (max-width: 1439px) {
+  .whitepaper__section .whitepaper__title {
+    font-size: 42px;
+  }
+}
+@media screen and (max-width: 1023px) {
+  .whitepaper__section .whitepaper__title {
+    font-size: 35px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .whitepaper__section .whitepaper__title {
+    font-size: 30px;
+  }
 }
 .whitepaper__desc {
   padding-bottom: 20px;
